# fasttalk-llm-microservice

./: .env.example  .env.vllm.example  .gitignore  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.vllm  README.md  docker-compose.apple.yml  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.vllm.yml  entrypoint.sh  main.py  pyproject.toml  requirements-vllm.txt  requirements.txt  run-apple.sh  run-cpu.bat  run-cpu.sh  run-gpu.bat  run-gpu.sh  test_llm_client.py
app/: __init__.py
app/agents/: __init__.py  voice_agent.py
app/core/: __init__.py  conversation_manager.py  ollama_handler.py  text_processor.py  vllm_handler.py  websocket_launcher.py  websocket_server.py  websocket_server_vllm.py
app/monitoring/: __init__.py  service_monitor.py
app/utils/: __init__.py  config.py  connection_manager.py  error_handler.py  logger.py
